--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "axios": "^0.17.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
@@ -17,7 +18,8 @@
     "lint": "node_modules/eslint/bin/eslint.js  --cache --format=node_modules/eslint-formatter-pretty ./react-app --ignore-pattern=\"CountriesConstants.js\"",
     "build": "node_modules/webpack/bin/webpack.js --config webpack/dev.config.js --watch --progress",
     "build-prod": "NODE_ENV=production node_modules/webpack/bin/webpack.js --config webpack/prod.config.js",
-    "start-dev": "node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack/dev.config.js"
+    "start-dev": "node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack/dev.config.js",
+    "test": "jest --coverage"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -38,6 +40,7 @@
     "eslint-plugin-react": "^7.4.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
+    "jest": "^22.1.4",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "postcss-import": "^11.0.0",
@@ -55,5 +58,31 @@
       "airbnb",
       "prettier"
     ]
+  },
+  "jest": {
+    "modulePaths": [
+      "./app"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "bower_components",
+      "shared"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/tests/__mocks__/file-mock.js",
+      "\\.(css|less)$": "<rootDir>/tests/__mocks__/style-mock.js"
+    },
+    "coverageThreshold": {
+      "./app/redux/**/*.js": {
+        "statements": 100,
+        "branches": 100,
+        "functions": 100,
+        "lines": 100
+      }
+    }
   }
 }
