--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "build": "node_modules/webpack/bin/webpack.js --config webpack/dev.config.js --watch --progress",
     "build-prod": "NODE_ENV=production node_modules/webpack/bin/webpack.js --config webpack/prod.config.js",
     "start-dev": "node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack/dev.config.js",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "e2e-test": "./node_modules/.bin/cypress open"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -30,11 +31,13 @@
     "babel-preset-stage-2": "^6.24.1",
     "compression-webpack-plugin": "^1.1.2",
     "css-loader": "^0.28.7",
+    "cypress": "^1.4.2",
     "eslint": "^4.11.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-prettier": "^2.7.0",
     "eslint-formatter-pretty": "^1.3.0",
+    "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
@@ -72,10 +75,19 @@
       "bower_components",
       "shared"
     ],
+    "coveragePathIgnorePatterns": [
+      "app/index.js",
+      "app/redux/store.js"
+    ],
+    "clearMocks": true,
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/tests/__mocks__/file-mock.js",
       "\\.(css|less)$": "<rootDir>/tests/__mocks__/style-mock.js"
     },
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "app/**/*.{js}"
+    ],
     "coverageThreshold": {
       "./app/redux/**/*.js": {
         "statements": 100,
@@ -83,6 +95,9 @@
         "functions": 100,
         "lines": 100
       }
-    }
+    },
+    "testMatch": [
+      "**/tests/**/*test.js?(x)"
+    ]
   }
 }
