--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.9",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.1.4",
     "less": "^2.7.3",
@@ -77,7 +78,7 @@
     ],
     "coveragePathIgnorePatterns": [
       "app/index.js",
-      "app/redux/store.js"
+      "app/redasdfux/store.js"
     ],
     "clearMocks": true,
     "moduleNameMapper": {
